<resources>
    <string name="app_name" translatable="false">पशु आहार</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="txt_discalimer">Disclaimer</string>


    <string name="login_forget_hint">Forgot Number?</string>
    <string name="login_first_name_hint">First Name</string>
    <string name="login_last_name_hint">Last Name</string>
    <string name="login_mobile_number_hint">Phone Number</string>
    <string name="txt_milk_yield">Milk Yield (litre/day)</string>
    <string name="txt_fat">FAT</string>
    <string name="txt_life_pregnant_stage">Pregnancy Duration</string>
    <string name="txt_avg_daily_gain">Average Daily Gain (g)</string>



    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>

    <string name="activity_weight">Weight Measurement</string>
    <string name="vid_demo">Video Demonstration</string>
    <string name="pic_demo">Picture Demonstration</string>
    <string name="play_video">Play Video</string>
    <string name="detail_animal">Enter details of your animal</string>
    <string name="txt_girth">Girth</string>
    <string name="txt_length">Length</string>
    <string name="txt_check">Check</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_btn_food_nutrition">Food Nutrition</string>
    <string name="txt_btn_feed_nutrition">Feed Nutrition</string>
    <string name="txt_select_animal">Name of Animals</string>
    <string name="txt_life_stage_select">Life stages of Animal</string>





    <string name="txt_register">SignUp</string>
    <string name="txt_change_lang">Select App Language</string>
    <string name="txt_eng_lang" translatable="false">English</string>
    <string name="txt_hindi_lang" translatable="false">Hindi</string>
    <string name="txt_marathi_lang" translatable="false">Marathi</string>
    <string name="txt_login">Login</string>
    <string name="app_title_name" translatable="false">paSau Aahar</string>


    <string name="language_switcher_dialog_title" translatable="false">Language</string>
    <string name="language_switcher_positive_button" translatable="false">Ok</string>
    <string name="language_switcher_negative_button" translatable="false">Cancel</string>


    <!--Sign UP-->

    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="village">Village</string>
    <string name="tehsil">Tehsil</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="pin">Pin code</string>
    <string name="land">Land(in acres)</string>
    <string name="cross_bread">Cross-Bred</string>
    <string name="cow">Deshi Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="goat">Goat</string>


    <string name="btnCheck">Check</string>
    <string name="btnCancel" translatable="false">Cancel</string>
    <string name="forgotErrorMsg">Your name is not registered. Please login by registering yourself.</string>
    <string name="loginError">Your Phone number is not found. Please register yourself.</string>


    <string name="btn_next">Next</string>

    <string name="disclaimer_data">
        <![CDATA[<font color=#FF0000>The information contained in this app is
for general purposes only. We make no
representations or warranties of any kind,
express or implied, about the completeness,
accuracy, reliability, suitability or availability
with respect to the information and App for
any purpose. Usage of such information and
App is strictly at your own risk. No event will
we be liable for any loss or damage.</font>
<br><br><font color=#0000FF>Developed by Dr. U B Angadi, CABIN,
ICAR-IASRI, New Delhi with help of animal
nutrition scientists from ICAR-NIANP,
Bangalore, India and ILRI, India and support
from Government of Odhisa to promote the
app to farmers
<br>
Suggestions & comments email to
<br>
</b>ub.angadi@icar.gov.in</b></font><br>]]>
</string>
</resources>